--- a/index.html
+++ b/index.html
@@ -323,177 +323,176 @@
               <div class="collapse" id="dequeTable" style="padding: 5px;">
                 <div class="card card-body">
                   <table class="table">
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th scope="col">S.No</th>
-                          <th scope="col">Question Name</th>
-                          <th scope="col" class="text-center">Video Solution</th>
-                        </tr>
-                      </thead>
-                      <tbody>
+                    <thead>
+                      <tr>
+                        <th scope="col">S.No</th>
+                        <th scope="col">Question Name</th>
+                        <th scope="col" class="text-center">Video Solution</th>
+                      </tr>
+                    </thead>
+                    <tbody>
 
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>
-                            Deque Implementations&nbsp;
-                            <a href="https://practice.geeksforgeeks.org/problems/deque-implementations/1"
-                              target="_blank" title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>
+                          Deque Implementations&nbsp;
+                          <a href="https://practice.geeksforgeeks.org/problems/deque-implementations/1" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>
-                            Double Ended Queue&nbsp;
-                            <a href="https://www.hackerearth.com/problem/algorithm/double-ended-queue/" target="_blank"
-                              title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>
+                          Double Ended Queue&nbsp;
+                          <a href="https://www.hackerearth.com/problem/algorithm/double-ended-queue/" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>
-                            Deque-STL&nbsp;
-                            <a href="https://www.hackerrank.com/challenges/deque-stl/problem" target="_blank"
-                              title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>
+                          Deque-STL&nbsp;
+                          <a href="https://www.hackerrank.com/challenges/deque-stl/problem" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">4</th>
-                          <td>
-                            Permutation Minimization by Deque&nbsp;
-                            <a href="https://codeforces.com/problemset/problem/1579/E1" target="_blank"
-                              title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>
+                          Permutation Minimization by Deque&nbsp;
+                          <a href="https://codeforces.com/problemset/problem/1579/E1" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">5</th>
-                          <td>
-                            Design Circular Deque&nbsp;
-                            <a href="https://leetcode.com/problems/design-circular-deque/" target="_blank"
-                              title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>
+                          Design Circular Deque&nbsp;
+                          <a href="https://leetcode.com/problems/design-circular-deque/" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">6</th>
-                          <td>
-                            Find Consecutive Integers from a Data Stream&nbsp;
-                            <a href="https://leetcode.com/problems/find-consecutive-integers-from-a-data-stream/"
-                              target="_blank" title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>
+                          Find Consecutive Integers from a Data Stream&nbsp;
+                          <a href="https://leetcode.com/problems/find-consecutive-integers-from-a-data-stream/"
+                            target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">7</th>
-                          <td>
-                            Chef and Reversing&nbsp;
-                            <a href="https://www.codechef.com/problems/REVERSE" target="_blank" title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>
+                          Chef and Reversing&nbsp;
+                          <a href="https://www.codechef.com/problems/REVERSE" target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">8</th>
-                          <td>
-                            Design Front Middle Back Queue&nbsp;
-                            <a href="https://leetcode.com/problems/design-front-middle-back-queue/description/"
-                              target="_blank" title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>
+                          Design Front Middle Back Queue&nbsp;
+                          <a href="https://leetcode.com/problems/design-front-middle-back-queue/description/"
+                            target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">9</th>
-                          <td>
-                            Valeriy and Deque&nbsp;
-                            <a href="https://codeforces.com/problemset/problem/1179/A" target="_blank"
-                              title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">9</th>
+                        <td>
+                          Valeriy and Deque&nbsp;
+                          <a href="https://codeforces.com/problemset/problem/1179/A" target="_blank"
+                            title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                        <tr>
-                          <th scope="row">10</th>
-                          <td>
-                            Shortest Subarray with Sum at Least K&nbsp;
-                            <a href="https://leetcode.com/problems/shortest-subarray-with-sum-at-least-k/description/"
-                              target="_blank" title="Question Link">
-                              <i class="fa fa-external-link-square"></i>
-                            </a>
-                          </td>
-                          <td>
-                            <a href="" target="_blank" title="Video Link">
-                              <i class="fa fa-youtube-play"></i>
-                            </a>
-                          </td>
-                        </tr>
+                      <tr>
+                        <th scope="row">10</th>
+                        <td>
+                          Shortest Subarray with Sum at Least K&nbsp;
+                          <a href="https://leetcode.com/problems/shortest-subarray-with-sum-at-least-k/description/"
+                            target="_blank" title="Question Link">
+                            <i class="fa fa-external-link-square"></i>
+                          </a>
+                        </td>
+                        <td>
+                          <a href="" target="_blank" title="Video Link">
+                            <i class="fa fa-youtube-play"></i>
+                          </a>
+                        </td>
+                      </tr>
 
-                      </tbody>
-                    </table>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
