queue container added

--- a/deque.html
+++ b/deque.html
@@ -86,8 +86,6 @@
         <div class="page-title-div">
             <div class="container">
                 <h1 class="text-center">Deque Question List</h1>
-                <!-- <h4 class="text-center">By: BinaryMagic (Pankaj Kumar)</h4>         -->
-                <!-- <p class="text-center">This page contain list of problem for each STL container.</p> -->
             </div>
         </div>
         
@@ -116,7 +114,9 @@
                             </a>
                             <div class="modern-list-item-description collapse" id="secondQuestion">
                                 <div class="modern-code-block">
-                                    <code>std::deque&lt;std::vector&lt;int&gt;&gt; myDeque;</code>
+                                    <code>deque&lt;vector&lt;int&gt;&gt; myDeque;</code><br>
+                                    <code>vector&lt;int&gt; v = {1, 2, 3, 4, 5};</code><br>
+                                    <code>myDeque.push_back(v);</code>
                                 </div>
                             </div>
                         </div>
