--- a/index.html
+++ b/index.html
@@ -231,9 +231,23 @@
             <div class="card-body">
               <h3>Stack</h3>
               <p class="card-text">
-                Stack is a <b class="important-point">data structure which allow LIFO operation</b>. STL stack is just implementation of it, which allow to do all possible operation with best time complexity.
+                Stack is a <b class="important-point">data structure which allow LIFO (last in first out) operation</b>. STL stack is just implementation of it, which allow to do all possible operation with best time complexity.
               </p>
               <a class="btn" href="stack.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-auto mb-3">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="image/queue.png" alt="Card image cap">
+            <div class="card-body">
+              <h3>Queue</h3>
+              <p class="card-text">
+                Queue is a <b class="important-point">data structure which allow FIFO (first in first out) operation</b>. STL queue is just
+                implementation of it, which allow to do all possible operation with best time complexity.
+              </p>
+              <a class="btn" href="queue.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -245,6 +259,7 @@
   <!-- grid of container end -->
   </div>
 
+  
   <!-- footer section start -->
   <footer class="footer">
     <div class="container-fluid text-center">
