--- a/array.html
+++ b/array.html
@@ -154,14 +154,12 @@
                                     aria-hidden="true"></i>
                             </a>
                             <div class="modern-list-item-description collapse" id="thirdQuestion">
-
                                 <div class="modern-code-block">
-                                    <code>std::array&lt;std::map&lt;KeyType, ValueType&gt;, ArraySize&gt; myArray;</code>
+                                    <code>array&lt;map&lt;int, string&gt;, arraySize&gt; myArray;</code><br>
+                                    <code>map&lt;int, string&gt; myMap1 = {{1, "One"}, {2, "Two"}, {3, "Three"}};</int></code><br>
+                                    <code>myArray[0]=myMap1;</code><br>
                                 </div>
-
-                                You can also use set, string or any other inplace of map.
                             </div>
-
                         </div>
 
                     </li>
