--- a/list.html
+++ b/list.html
@@ -130,6 +130,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="modern-list-item">
+                            <a class="modern-list-item-name" data-toggle="collapse" href="#fourthQuestion" role="button" aria-expanded="false"
+                                aria-controls="fourthQuestion">
+                                Use map inside list, syntax<i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </a>
+                            <div class="modern-list-item-description collapse" id="fourthQuestion">
+                                <div class="modern-code-block">
+                                    <code>list&lt;map&lt;int, string&gt;&gt; myList;</code><br>
+                                    <code>map&lt;int, string&gt; myMap1 = {{1, "One"}, {2, "Two"}, {3, "Three"}};</code><br>
+                                    <code>myList.push_back(myMap1);</code><br>
+                                </div>
+                            </div>
+                        </div>
             
                     </li>
                 </ol>
