priority queue added, video autoplay in mute

--- a/deque.html
+++ b/deque.html
@@ -127,7 +127,7 @@
         
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YjkefZZ9-HE"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YjkefZZ9-HE?autoplay=1&mute=1"></iframe>
                 </div>
             </div>
         </div>
