--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   Why should choose STL ? <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <div class="modern-list-item-description collapse" id="thirdQuestion">
-                  By using this library, you can save time, <b>gain best time and space complexity</b>, finish work in
+                  By using this library, you can save time in writing code, <b>gain best time and space complexity</b>, finish work in
                   very little line of code. It is mainly known for its <b>versatility, efficiency, and ease of use</b>.
                 </div>
               </div>
@@ -157,7 +157,7 @@
 
         <div class="col-md">
           <div class="embed-responsive embed-responsive-16by9 text-center">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uDUYQtZ7eUk"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uDUYQtZ7eUk?autoplay=1&mute=1"></iframe>
           </div>
         </div>
       </div>
@@ -248,6 +248,19 @@
                 implementation of it, which allow to do all possible operation with best time complexity.
               </p>
               <a class="btn" href="queue.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-auto mb-3">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="image/priority_queue.png" alt="Card image cap">
+            <div class="card-body">
+              <h3>Priority Queue</h3>
+              <p class="card-text">
+                Priority Queue balance element according to priority. It is just <b class="important-point">implementation of heap data structure</b>. You can use <b class="important-point">min or max heap with help of this container</b> in just a line of code.
+              </p>
+              <a class="btn" href="priority_queue.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
