--- a/stack.html
+++ b/stack.html
@@ -150,9 +150,19 @@
                         <div class="modern-list-item">
                             <a class="modern-list-item-name" data-toggle="collapse" href="#thirdQuestion" role="button" aria-expanded="false"
                                 aria-controls="thirdQuestion">
-                                Use vector inside stack, syntax<i class="fa fa-caret-down" aria-hidden="true"></i>
+                                Difference between stack and queue ?<i class="fa fa-caret-down" aria-hidden="true"></i>
                             </a>
                             <div class="modern-list-item-description collapse" id="thirdQuestion">
+                                Stack follow LIFO (last in first out) principle where as queue follow FIFO (first in first out) principle.
+                            </div>
+                        </div>
+
+                        <div class="modern-list-item">
+                            <a class="modern-list-item-name" data-toggle="collapse" href="#fourthQuestion" role="button" aria-expanded="false"
+                                aria-controls="fourthQuestion">
+                                Use vector inside stack, syntax<i class="fa fa-caret-down" aria-hidden="true"></i>
+                            </a>
+                            <div class="modern-list-item-description collapse" id="fourthQuestion">
                                 <div class="modern-code-block">
                                     <code>stack&lt;vector&lt;int&gt;&gt; myStack;</code><br>
                                     <code>vector&lt;int&gt; v = {1, 2, 3, 4, 5};</code><br>
@@ -171,7 +181,7 @@
         
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-uV5G_blFlc"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-uV5G_blFlc?autoplay=1&mute=1"></iframe>
                 </div>
             </div>
         </div>
