--- a/array.html
+++ b/array.html
@@ -150,7 +150,7 @@
                         <div class="modern-list-item">
                             <a class="modern-list-item-name" data-toggle="collapse" href="#thirdQuestion" role="button"
                                 aria-expanded="false" aria-controls="thirdQuestion">
-                                Syntax of declaration map data type inside array <i class="fa fa-caret-down"
+                                Use map data type inside array, syntax <i class="fa fa-caret-down"
                                     aria-hidden="true"></i>
                             </a>
                             <div class="modern-list-item-description collapse" id="thirdQuestion">
@@ -169,7 +169,7 @@
 
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zcBMRjaR0dA"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zcBMRjaR0dA?autoplay=1&mute=1"></iframe>
                 </div>
             </div>
         </div>
