autoplay for all video is removed

--- a/list.html
+++ b/list.html
@@ -151,7 +151,7 @@
         
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1JeLxbD1ruk?autoplay=1&mute=1"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1JeLxbD1ruk"></iframe>
                 </div>
             </div>
         </div>
