--- a/stack.html
+++ b/stack.html
@@ -181,7 +181,7 @@
         
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-uV5G_blFlc?autoplay=1&mute=1"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-uV5G_blFlc"></iframe>
                 </div>
             </div>
         </div>
