--- a/array.html
+++ b/array.html
@@ -169,7 +169,7 @@
 
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zcBMRjaR0dA?autoplay=1&mute=1"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zcBMRjaR0dA"></iframe>
                 </div>
             </div>
         </div>
