--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="col-md">
           <div class="embed-responsive embed-responsive-16by9 text-center">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uDUYQtZ7eUk?autoplay=1&mute=1"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/uDUYQtZ7eUk"></iframe>
           </div>
         </div>
       </div>
