--- a/priority_queue.html
+++ b/priority_queue.html
@@ -177,7 +177,7 @@
         
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jzQqlYlZUuA?autoplay=1&mute=1"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jzQqlYlZUuA"></iframe>
                 </div>
             </div>
         </div>
