--- a/queue.html
+++ b/queue.html
@@ -186,7 +186,7 @@
 
             <div class="col-md">
                 <div class="embed-responsive embed-responsive-16by9 text-center container">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rzsJIYZO7fs?autoplay=1&mute=1"></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/rzsJIYZO7fs"></iframe>
                 </div>
             </div>
         </div>
